@@ -11,6 +11,10 @@ class Swift_DependencyContainerAcceptanceTest extends \PHPUnit_Framework_TestCas
         $di = Swift_DependencyContainer::getInstance();
         foreach ($di->listItems() as $itemName) {
             try {
+                // to be removed in 6.0
+                if ('transport.mail' === $itemName) {
+                    continue;
+                }
                 $di->lookup($itemName);
             } catch (Swift_DependencyException $e) {
                 $this->fail($e->getMessage());
